--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                   </li>
                 </ul>
                 <div class="header-button wow fadeInUp" data-wow-delay="1s">
-                  <a href="#" class="btn btn-common">Get a Free Quote</a>
+                  <a href="#" class="btn btn-common"></a>
                 </div>
               </div>
             </div>
@@ -162,12 +162,12 @@
               <p>Est diam venenatis arcu lacus ad. Duis quis eros. Cursus et rutrum eleifend sollicitudin lacinia justo id turpis. Nec convallis integer. Odio eget duis. Nulla aenean et. Blandit varius sollicitudin. Pellentesque leo primis neque urna magnis. Elit ut sollicitudin. Et est a nam dolores eget itaque sagittis et parturient duis est eleifend sociis rutrum odio viverra integer.</p>
               <div class="about-profile">
                 <ul class="admin-profile">
-                  <li><span class="pro-title"> Name </span> <span class="pro-detail">Tom Saulnier</span></li>
-                  <li><span class="pro-title"> Age </span> <span class="pro-detail">25 Years</span></li>
-                  <li><span class="pro-title"> Experience </span> <span class="pro-detail">4 Years</span></li>
+                  <li><span class="pro-title"> Name </span> <span class="pro-detail">Srihari Athiyarath </span></li>
+                  <li><span class="pro-title"> Age </span> <span class="pro-detail">22 Years</span></li>
+                  <li><span class="pro-title"> Experience </span> <span class="pro-detail">1 Years</span></li>
                   <li><span class="pro-title"> Country </span> <span class="pro-detail">USA</span></li>
-                  <li><span class="pro-title"> Location </span> <span class="pro-detail">San Francisco, CA</span></li>
-                  <li><span class="pro-title"> e-mail </span> <span class="pro-detail">email@example.com</span></li>
+                  <li><span class="pro-title"> Location </span> <span class="pro-detail">Syracuse, NY</span></li>
+                  <li><span class="pro-title"> e-mail </span> <span class="pro-detail">sathiyar@syr.edu</span></li>
                   <li><span class="pro-title"> Phone </span> <span class="pro-detail">+ (00) 123 456 789</span></li>
                   <li><span class="pro-title"> Freelance </span> <span class="pro-detail">Available</span></li>
                 </ul>
@@ -252,21 +252,21 @@
                 </li>
                 <li>
                   <div class="content-text">
-                    <h3 class="line-title">Bsc In CSE - Yale University</h3>
-                    <span>2012 - 2016</span>
+                    <h3 class="line-title">MS In CSE - Syracuse University</h3>
+                    <span>2019 - 2021</span>
                     <p class="line-text">Expenses as material breeding insisted building to in. Continual so distrusts pronounce by unwilling listening. Thing do taste on we manor.</p>
                   </div>
                 </li>
                 <li>
                   <div class="content-text">
-                    <h3 class="line-title">Higher Secondary School - San Francisco College</h3>
+                    <h3 class="line-title">MS In CSE - Vishveshwara technological University</h3>
                     <span>2010 - 2012</span>
                     <p class="line-text">Expenses as material breeding insisted building to in. Continual so distrusts pronounce by unwilling listening. Thing do taste on we manor.</p>
                   </div>
                 </li>
                 <li>
                   <div class="content-text">
-                    <h3 class="line-title">Secondary School - Labratory High School</h3>
+                    <h3 class="line-title"></h3>
                     <span>2005 - 2010</span>
                     <p class="line-text">Expenses as material breeding insisted building to in. Continual so distrusts pronounce by unwilling listening. Thing do taste on we manor.</p>
                   </div>
@@ -283,14 +283,14 @@
                 </li>
                 <li>
                   <div class="content-text">
-                    <h3 class="line-title">Art Director - Tesla Inc.</h3>
+                    <h3 class="line-title">VC Learning - Co-Founder </h3>
                     <span>Jan 2018 - Present</span>
                     <p class="line-text">Expenses as material breeding insisted building to in. Continual so distrusts pronounce by unwilling listening. Thing do taste on we manor.</p>
                   </div>
                 </li>
                 <li>
                   <div class="content-text">
-                    <h3 class="line-title">UX/UI Designer - Samsung</h3>
+                    <h3 class="line-title">VigyanLabs Software Engineering Intern </h3>
                     <span>Nov 2016 - Dec 2017</span>
                     <p class="line-text">Expenses as material breeding insisted building to in. Continual so distrusts pronounce by unwilling listening. Thing do taste on we manor.</p>
                   </div>
